--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -15,19 +16,21 @@
     <properties>
         <scala.version>2.9.2</scala.version>
         <jersey.version>1.13</jersey.version>
+        <spring.version>3.1.2.RELEASE</spring.version>
+        <jetty.version>6.1.26</jetty.version>
     </properties>
 
     <modules>
         <module>crud</module>
         <module>importer</module>
-		<module>importer.ui</module>
+        <module>importer.ui</module>
         <module>rs</module>
-		<module>api.model</module>
+        <module>api.model</module>
         <module>api</module>
         <module>portal</module>
     </modules>
 	
-	<build>
+    <build>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -52,12 +55,12 @@
 
     <dependencyManagement>
         <dependencies>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.8.1</version>
-			</dependency>
-			<dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.8.1</version>
+            </dependency>
+            <dependency>
                 <groupId>uk.org.nbn</groupId>
                 <artifactId>nbnv-crud</artifactId>
                 <version>${project.version}</version>
@@ -72,29 +75,29 @@
                 <artifactId>guice</artifactId>
                 <version>3.0</version>
             </dependency>
-			<dependency>
-			  <groupId>log4j</groupId>
-			  <artifactId>log4j</artifactId>
-			  <version>1.2.15</version>
-			  <exclusions>
-				<exclusion>
-				  <groupId>javax.mail</groupId>
-				  <artifactId>mail</artifactId>
-				</exclusion>
-				<exclusion>
-				  <groupId>javax.jms</groupId>
-				  <artifactId>jms</artifactId>
-				</exclusion>
-				<exclusion>
-				  <groupId>com.sun.jdmk</groupId>
-				  <artifactId>jmxtools</artifactId>
-				</exclusion>
-				<exclusion>
-				  <groupId>com.sun.jmx</groupId>
-				  <artifactId>jmxri</artifactId>
-				</exclusion>
-			  </exclusions>
-			</dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.15</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javax.mail</groupId>
+                        <artifactId>mail</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>javax.jms</groupId>
+                        <artifactId>jms</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.sun.jdmk</groupId>
+                        <artifactId>jmxtools</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.sun.jmx</groupId>
+                        <artifactId>jmxri</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -104,10 +107,10 @@
             <name>Scala Tools Maven2 Repository</name>
             <url>http://scala-tools.org/repo-releases</url>
         </repository>
-		<repository>
-		  <id>gbif-all</id>
-		  <url>http://repository.gbif.org/content/groups/gbif</url>
-		</repository>
+        <repository>
+            <id>gbif-all</id>
+            <url>http://repository.gbif.org/content/groups/gbif</url>
+        </repository>
     </repositories>
 	
     <pluginRepositories>
