--- a/gis/pom.xml
+++ b/gis/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
             
         <dependency>
             <groupId>javax.servlet</groupId>
