--- a/importer.ui/pom.xml
+++ b/importer.ui/pom.xml
@@ -103,5 +103,10 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.7</version>
+        </dependency>
     </dependencies>
 </project>
