--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>properties</module>
         <module>crud</module>
         <module>importer</module>
+        <module>importer.grin</module>
         <module>importer.ui</module>
         <module>rs</module>
         <module>api.model</module>
