--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -5,3 +5,6 @@ sso_token_default_ttl = 1209600000
 sso_token_key = nbn.token_key
 sso_token_domain = 
 
+db_warehouse_url = jdbc:sqlserver://nbnsql-b.nerc-lancaster.ac.uk;databaseName=NBNWarehouse
+db_warehouse_username = NBNImporter
+db_warehouse_password = Ecowaswashere9
