--- a/gis/src/main/resources/gis.properties
+++ b/gis/src/main/resources/gis.properties
@@ -2,7 +2,7 @@
 # in order to power some of the maps defined in this gis project
 mapserver = http://localhost/fcgi-bin/mapserv.exe
 api = http://localhost:8084/api
-spatialConnection = Server=NBNSQL-B;Database=NBNWarehouse;uid=NBNImporter;pwd=Ecowaswashere9;Integrated Security=True
+spatialConnection = Server=NBNSQL-B;Database=NBNWarehouse;uid=NBNGIS;pwd=ForgottenWindGasClock25;Integrated Security=True
 ordnanceSurveyMapDataLocation = E:\Modern
 ordnanceSurveyAllowedReferrerPrefix = http://localhost:8084/
 
