--- a/gis/src/main/resources/gis.properties
+++ b/gis/src/main/resources/gis.properties
@@ -5,6 +5,7 @@ api = http://localhost:8084/api
 spatialConnection = Server=NBNSQL-B;Database=NBNWarehouse;uid=NBNGIS;pwd=ForgottenWindGasClock25;Integrated Security=True
 ordnanceSurveyMapDataLocation = E:\Modern
 ordnanceSurveyAllowedReferrerPrefix = http://localhost:8084/
+contextLayersLocation = E:\Context
 
 # The following property locates the root of the NBN Gateway Portal which links
 # from the acknowledgement pages are based from.
