--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>nbnv-crud</artifactId>
         </dependency>
         <dependency>
+            <groupId>uk.org.nbn</groupId>
+            <artifactId>nbnv-properties</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
         </dependency>
