--- a/api.model/pom.xml
+++ b/api.model/pom.xml
@@ -26,5 +26,11 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-server-linking</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
     </dependencies>
 </project>
