--- a/gis/pom.xml
+++ b/gis/pom.xml
@@ -81,6 +81,20 @@
             <version>7.0.32</version>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- Testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>3.2.2.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+            
     </dependencies>
     
     <build>
