--- a/gis/pom.xml
+++ b/gis/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>uk.ac.ceh</groupId>
             <artifactId>dynamo-mapping</artifactId>
-            <version>0.3-SNAPSHOT</version>
+            <version>0.3</version>
         </dependency>
         
         <!-- Hibernate Validator -->
