--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -26,9 +26,12 @@ db_core_username = NBNTestAPI
 db_core_password = 2013Amarrcruiser
 
 # Define the connection properties for the WAREHOUSE database
-db_warehouse_url = jdbc:sqlserver://nbn-b.nerc-lancaster.ac.uk;databaseName=NBNWarehouse
-db_warehouse_username = NBNAPI
-db_warehouse_password = SingLikeTieBarn2013
+#db_warehouse_url = jdbc:sqlserver://nbn-b.nerc-lancaster.ac.uk;databaseName=NBNWarehouse
+#db_warehouse_username = NBNAPI
+#db_warehouse_password = SingLikeTieBarn2013
+db_warehouse_url = jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=TestNBNCore
+db_warehouse_username = NBNTestAPI
+db_warehouse_password = 2013Amarrcruiser
 
 # Define the emailer properties
 email_host = smtp.nerc-lancaster.ac.uk
